[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "junubsms"
version = "0.1.0"
description = "Python client for the JunubSMS bulk SMS API"
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock"]
